# aiomcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
aiomcp/: __init__.py  jsonrpc_error_codes.py  mcp_authorization.py  mcp_client.py  mcp_context.py  mcp_flag.py  mcp_schema_resolver.py  mcp_serialization.py  mcp_server.py  mcp_transport_resolver.py  mcp_version.py
aiomcp/contracts/: mcp_common.py  mcp_content.py  mcp_message.py  mcp_schema.py  mcp_tool.py
aiomcp/transports/: base.py  direct.py  http.py  memory.py  stdio.py
examples/: aiomcp_authorization_client.py  aiomcp_authorization_server.py  aiomcp_http_client.py  aiomcp_http_server.py  aiomcp_stdio_server.py  mcp_http_client.py  mcp_stdio_server.py
samples/: aiomcp_http_server.py  aiomcp_stdio_client.py  mcp_http_server.py  mcp_stdio_client.py  stdio_client.py  stdio_server.py
tests/: test_authorization.py  test_client_results.py  test_complex_message.py  test_contract_metadata.py  test_error_handling.py  test_lifecycle.py  test_schema_resolver.py  test_tool_registration.py  test_transports.py
