[project]
name = "aiomcp"
description = "A Simple Python MCP Solution"
version = "0.0.2"
requires-python = ">=3.10"
readme = "README.md"
license-files = ["LICENSE"]
dependencies = ["pydantic", "aiohttp"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiomcp*"]
