[project]
name = "aiomcp"
description = "A Simple Python MCP Solution"
version = "0.0.10"
requires-python = ">=3.11"
readme = "README.md"
license-files = ["LICENSE"]
dependencies = ["pydantic", "aiohttp", "authlib"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiomcp*"]
